--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,10 @@ services:
     ports:
       - "9200:9200"
       - "9300:9300"
+
+  kibana:
+    image: docker.elastic.co/kibana/kibana:6.2.3
+    environment:
+      ELASTICSEARCH_PASSWORD: "password"
+    ports:
+      - "5601:5601"
