--- a/filebeat.yml
+++ b/filebeat.yml
@@ -3,4 +3,4 @@ filebeat.prospectors:
   paths:
     - /repo/logstash-tutorial.log
 output.logstash:
-  hosts: ["logstash:5044"]
+  hosts: ["localhost:5044"]
